# Gimmel

./: .gitmodules  readme.md
.github/workflows/: build.yml
include/: biquad.hpp  chorus.hpp  compressor.hpp  delay.hpp  detune.hpp  envelope.hpp  expander.hpp  filter.hpp  flanger.hpp  gimmel.hpp  looper.hpp  oscillator.hpp  phaser.hpp  reverb.hpp  saturation.hpp  tremolo.hpp  utility.hpp
test/: BENCHMARK_README.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_RESULTS.md  README.md  benchmark_test  build_and_run_benchmark.sh  build_micro_benchmark.sh  micro_benchmark  run.sh  test.cpp  wav.h
test/src/: benchmark.cpp  micro-benchmark.cpp
